--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -13,3 +13,4 @@
 @import "./pages/nous-contacter";
 @import "./pages/adhesion";
 @import "./pages/avantages-de-mon-adhesion";
+@import "./pages/fiches-infos";
