--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2312,6 +2312,9 @@ footer .footer-copyright .heart {
   margin: 30px auto 0;
   width: 300px;
 }
+#fiches-infos .cssct {
+  width: 300px;
+}
 #fiches-infos .types-elus2 {
   grid-template-columns: repeat(2, 1fr);
 }
