--- a/assets/css/layout/_header.scss
+++ b/assets/css/layout/_header.scss
@@ -14,7 +14,7 @@ header {
 
     @media screen and (max-width: 1277px) {
       grid-template-columns: 1fr;
-      height: 15vh;
+      height: 20vh;
     }
 
     .menu-barre-sup {
@@ -24,28 +24,32 @@ header {
       gap: 30px;
 
       @media screen and (max-width: 1277px) {
-        display: flex;
         justify-content: space-between;
       }
 
       img {
-        width: 15%;
+        width: 20%;
 
         @media screen and (max-width: 1277px) {
-          height: 10vh;
+          height: 15vh;
           width: auto;
         }
       }
 
       .menuIcons {
         display: none;
+
+        @media screen and (max-width: 1346px) {
+          display: flex;
+          justify-content: flex-end;
+        }
+
         i {
           font-size: 1.5rem;
           color: $color1;
-        }
-
-        @media screen and (max-width: 1346px) {
-          display: block;
+          display: flex;
+          justify-content: flex-end;
+          // justify-content: end;
         }
 
         #closeIcon {
@@ -67,12 +71,12 @@ header {
           @media screen and (max-width: 1346px) {
             flex-direction: column;
             position: absolute;
-            top: 80px;
+            top: 20vh;
             right: 0;
             background: $white;
             height: 100vh;
-            padding: 20px 50px;
-            gap: 20px;
+            padding: 10px 20px;
+            gap: 12px;
             justify-content: start;
             align-items: start;
           }
@@ -93,6 +97,10 @@ header {
               display: flex;
               width: 100%;
               height: 100%;
+
+              @media screen and (max-width: 1277px) {
+                font-size: 0.9rem;
+              }
 
               i {
                 transition: 0.2s;
@@ -265,5 +273,9 @@ header {
     @media screen and (max-width: 1346px) {
       display: block;
     }
+  }
+
+  .sous-nav-responsive {
+    margin: 0 0 0 15px;
   }
 }
