--- a/assets/css/pages/_vos-droits.scss
+++ b/assets/css/pages/_vos-droits.scss
@@ -199,6 +199,7 @@
             width: 70px;
             height: 70px;
             border-radius: 360px;
+            box-shadow: 0 0 5px $blackShadow;
             display: flex;
             justify-content: center;
             align-items: center;
