--- a/assets/css/pages/_nous-connaitre.scss
+++ b/assets/css/pages/_nous-connaitre.scss
@@ -267,6 +267,7 @@
 
         @media screen and (max-width: 1000px) {
           grid-template-columns: 1fr;
+          // width: 100%;
         }
 
         .fonctionnement-item {
@@ -278,6 +279,11 @@
           gap: 10px;
           justify-content: center;
           align-items: center;
+
+          @media screen and (max-width: 1000px) {
+            // grid-template-columns: 1fr;
+            // width: 100%;
+          }
 
           &:first-of-type {
             margin-left: 30px;
@@ -291,11 +297,12 @@
             width: 70px;
             height: 70px;
             border-radius: 360px;
+            box-shadow: 0 0 5px $blackShadow;
             display: flex;
             justify-content: center;
             align-items: center;
             color: $color1;
-            transform: translateX(-55px);
+            transform: translateX(-50px);
           }
         }
       }
