--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -107,6 +107,10 @@
       text-align: justify;
       font-size: 0.9rem;
 
+      @media screen and (max-width: 960px) {
+        text-align: left;
+      }
+
       .signature {
         font-weight: bold;
         color: $white;
