--- a/assets/css/pages/_fiches-infos.scss
+++ b/assets/css/pages/_fiches-infos.scss
@@ -88,10 +88,17 @@
   }
   .types-elus2 {
     grid-template-columns: repeat(2, 1fr);
+
+    @media screen and (max-width: 950px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   .types-elus3 {
     grid-template-columns: repeat(3, 1fr);
+    @media screen and (max-width: 1339px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   #ressources {
